# chess

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  misc1.perft  pos4b.perft  pos5.perft
cpp_binding/: CMakeLists.txt  README.md  chess.cpp  chess.hpp
cpp_binding/doc/html/: chess_8hpp.html  classchess_1_1Bitboard-members.html  classchess_1_1Board-members.html  classchess_1_1Board.html  classchess_1_1Move-members.html  classchess_1_1Move.html  classchess_1_1MoveGenerator.html  dir_1576ffca5ea2a0697156fa347e0a7776.html  functions.html  menudata.js  struct____chess__util__board-members.html  struct____chess__util__board.html  struct____chess__util__move__gen-members.html
cpp_binding/doc/html/search/: all_1.js  all_10.js  all_3.js  all_5.js  all_7.js  all_8.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  pages_0.js
cpp_binding/doc/latex/: annotated.tex  chess_8hpp.tex  classchess_1_1Bitboard.tex  classchess_1_1Board.tex  classchess_1_1BoardPos.tex  classchess_1_1Move.tex  classchess_1_1MoveGenerator.tex  files.tex  index.tex  refman.tex  struct____chess__util__board.tex  struct____chess__util__move__gen.tex
cpp_example/: CMakeLists.txt  example.cpp
docs/: annotated.html  chess_8hpp_source.html  classchess_1_1Bitboard.html  classchess_1_1BoardPos-members.html  classchess_1_1BoardPos.html  classchess_1_1Move-members.html  classchess_1_1Move.html  classchess_1_1MoveGenerator-members.html  classes.html  files.html  functions.html  functions_func.html  index.html  struct____chess__util__move__gen.html
docs/search/: all_0.js  all_10.js  all_11.js  all_2.js  all_4.js  all_6.js  all_9.js  all_a.js  all_c.js  all_d.js  classes_1.js  enums_0.js  files_0.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_5.js  functions_6.js  functions_7.js  functions_a.js  functions_b.js  functions_c.js  functions_e.js  pages_0.js  searchdata.js
frontend/: package-lock.json  package.json
frontend/public/: index.html  interface.wasm
frontend/src/: App.css  App.tsx  BitboardInspect.tsx  Board.tsx  BoardFENWrapper.tsx  EvalGraph.tsx  Game.tsx  GameUI.tsx  Games.tsx  Module.js  PlayersTable.tsx  UserControls.tsx  selectStyles.ts
frontend/src/clib/: interface.c  interface.js  notes.txt
go_binding/: chess.go
go_chess/: go.mod  go_chess.go
go_example/: example.go  go.mod  go.sum
lib/: CMakeLists.txt
lib/include/: chess-util.h
lib/src/: bitboard.c  found_magics.c  found_magics.h  move_gen.c
perft_tests/: perft  pos2.perft  pos3.perft  pos4a.perft  pos6.perft  regress1.perft  regress2.perft  regress3.perft  startpos.perft
rust_binding/: Cargo.toml
rust_binding/chess/src/: clib.rs  lib.rs
rust_binding/src/: clib.rs  lib.rs
server/: AsyncFileReader.hpp  AsyncFileStreamer.hpp  CMakeLists.txt  Middleware.hpp  server.cpp  server.hpp
server-rs/: Cargo.toml  protocol.md
server-rs/src/: apikey.rs  cmd.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  schema.rs  server.rs  tournament.rs
server-rs/src/games/: chess_game.rs  mod.rs
server-rs/tests/: session_test.rs
server-rs/tests/common/: mod.rs
src/: bitboard.c  bitboard.h  found_magics.h  main.c  move_gen.c  move_gen.h  pertf_test.c
utils/: CMakeLists.txt  find_magics.c  perft_divide.c  perft_test.c  sample.c  sample_game.c
