[package]
name = "server-rs"
version = "0.1.0"
authors = ["edwardwawrzynek <edward@wawrzynek.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = { path = "../rust_binding/chess" }
diesel = { version = "1.4.6", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
sha2 = "0.9.5"
uuid = { version = "0.4", features = ["v4"] }
itertools = "0.9.0"
bcrypt = "0.8"
